add 09-28-2022 chinese post

--- a/posts/2022-09-27-prodigy-iaa-textcat/index.qmd
+++ b/posts/2022-09-27-prodigy-iaa-textcat/index.qmd
@@ -11,7 +11,9 @@ format:
 
 TODO: add preview image
 
-## Multi-user sessions in Prodigy 
+## Sessions in Prodigy
+
+Per the [Prodigy Glossary](https://prodi.gy/docs#glossary), a single annotation session is an instance of starting the Prodigy server to exiting it. You can start multiple sessions that add data to the same dataset. The annotations of each sessions will also be stored as a separate dataset, named after the timestamp. This lets you inspect or delete individual sessions.
 
 Since v1.7.0 was released, Prodigy has offered [multi-user sessions](https://prodi.gy/docs/api-web-app#multi-user-sessions) within the same Prodigy instance. This functionality enables dividing up Prodigy annotations across different annotators when saving annotations to the same dataset and performing an identical task.
 
