--- a/posts/2022-09-30-prodigy-db-intro/index.qmd
+++ b/posts/2022-09-30-prodigy-db-intro/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Retrieving Prodigy annotations in Python"
 author: "Ryan Wesslen"
-date: "2022-09-25"
+date: "2022-09-30"
 categories: [prodigy, database]
 execute: 
   enabled: false
@@ -23,13 +23,17 @@ python -m prodigy db-in new_dataset /path/to/data.jsonl
 python -m prodigy db-out new_dataset > /path/to/data.jsonl
 ```
 
+```
+python -m prodigy db-out issue-5948 | jq 
+```
+
+
 ## `db-merge`
 
 ```
 python -m prodigy db-merge new_dataset  
 ```
 
-```
 
 ## Accessing the database programmatically
 
@@ -43,11 +47,6 @@ examples = db.get_dataset("my_dataset")
 ```
 
 How to use when have them. Use it to describe format for data.
-
-##
-
-
-##
 
 ```
 from prodigy.components.db import connect
