add code scroll to spacy-shiny

--- a/posts/2022-10-10-spacy-shiny/index.qmd
+++ b/posts/2022-10-10-spacy-shiny/index.qmd
@@ -5,6 +5,9 @@ date: "10/10/2022"
 categories: [vis,spacy]
 image: "app.png"
 image-alt: "A Shiny for Python app using spaCy."
+format:
+  html:
+    code-overflow: scroll
 ---
 
 Recently, RStudio (soon-to-be-renamed, Posit) announced [they're alpha testing an extension of Shiny to Python](https://shiny.rstudio.com/py/)!
