update spacy-shiny post image

--- a/posts/2022-10-10-spacy-shiny/index.qmd
+++ b/posts/2022-10-10-spacy-shiny/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "spaCy in Shiny for Python"
+author: "Ryan Wesslen"
 description: "Creating an app using spaCy with Shiny for Python"
 date: "10/10/2022"
 categories: [vis,spacy]
@@ -23,7 +24,7 @@ In this post, I want to briefly describe the basics of the app. I'll reference s
 ```
 
 :::{.callout-warning}
-Shiny for Python is still in its alpha testing. It could (and very likely will) change aspects in its API. Be sure to keep an eye the [Shiny for Python](https://shiny.rstudio.com/py/) website for up-to-date documentation and news about the project.
+Shiny for Python is still in its alpha testing. It could (and very likely will) change API aspects in the future. Be sure to keep an eye the [Shiny for Python](https://shiny.rstudio.com/py/) website for up-to-date documentation and news about the project.
 :::
 
 ## What makes up a Shiny app?
