update prodigy-chinese post

--- a/posts/2022-09-28-prodigy-chinese/index.qmd
+++ b/posts/2022-09-28-prodigy-chinese/index.qmd
@@ -6,7 +6,7 @@ categories: [prodigy, chinese, ner, config]
 execute: 
   enabled: false
 image: chinese_preview.png
-description: "Overview of how to get started with Chinese in Prodigy"
+description: "Overview of how to annotate with Chinese in Prodigy"
 ---
 
 Similar to other major languages like English, spaCy offers [four pipelines for Chinese](https://spacy.io/models/zh): `zh_core_web_sm`, `zh_core_web_md`, `zh_core_web_lg`, and `zh_core_web_trf`. 
