add file name to spacy post

--- a/posts/2022-10-10-spacy-shiny/index.qmd
+++ b/posts/2022-10-10-spacy-shiny/index.qmd
@@ -36,7 +36,7 @@ Shiny apps have two major parts:
 
 Here's a generic Shiny app for Python:
 
-```python
+```{.python filename="app.py"}
 from shiny import App, ui
 
 # Part 1: ui ----
